[metadata]
name = pymmunomics
version = 1.0.0
author = Jasper Braun
author_email = jasperbraun90@gmail.com
description = Various helper tools for analyzing Immunomics data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JasperBraun/pymmunomics
project_urls =
    Bug Tracker = https://github.com/JasperBraun/pymmunomics/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
